test/parser/prs/internal-node-01.hac
// "internal-node-01.hac"
// testing grammatic extensions to language
// z should not be found as a bool
// expect pass

defproc bogus(bool x, y, z, w) {
prs {
	x & y		-> @z-
	~@z & w		-> w-
}
	z = w;		// error: z is not a bool
}

bogus A;

